// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { CustomerTicketingModule } from "@spartacus/customer-ticketing";
import { customerTicketingTranslationChunksConfig, customerTicketingTranslations } from "@spartacus/customer-ticketing/assets";
import { CustomerTicketingRootModule } from "@spartacus/customer-ticketing/root";

@NgModule({
  declarations: [],
  imports: [
    CustomerTicketingRootModule,
    CustomerTicketingModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: customerTicketingTranslations,
      chunks: customerTicketingTranslationChunksConfig,
    },
  })]
})
export class CustomerTicketingFeatureModule { }
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { customerTicketingTranslationChunksConfig, customerTicketingTranslations } from "@spartacus/customer-ticketing/assets";
import { CustomerTicketingRootModule, CUSTOMER_TICKETING_FEATURE } from "@spartacus/customer-ticketing/root";

@NgModule({
  declarations: [],
  imports: [
    CustomerTicketingRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CUSTOMER_TICKETING_FEATURE]: {
        module: () =>
          import('@spartacus/customer-ticketing').then((m) => m.CustomerTicketingModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: customerTicketingTranslations,
      chunks: customerTicketingTranslationChunksConfig,
    },
  })
  ]
})
export class CustomerTicketingFeatureModule { }
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/customer-ticketing";
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false
        },
        "@schematics/angular:directive": {
          "standalone": false
        },
        "@schematics/angular:pipe": {
          "standalone": false
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular-devkit/build-angular:application",
          "options": {
            "outputPath": "dist/schematics-test",
            "index": "src/index.html",
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets"
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/customer-ticketing.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kb",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "2kb",
                  "maximumError": "4kb"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "extract-i18n": {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": {
            "buildTarget": "schematics-test:build"
          }
        },
        "test": {
          "builder": "@angular-devkit/build-angular:karma",
          "options": {
            "polyfills": [
              "zone.js",
              "zone.js/testing"
            ],
            "tsConfig": "tsconfig.spec.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              "src/favicon.ico",
              "src/assets"
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/customer-ticketing.scss"
            ],
            "scripts": [],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          }
        }
      }
    }
  }
}"
`;
